--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,7 @@
   "description": "Netlify CMS documentation website built with Gatsby",
   "scripts": {
     "start": "gatsby develop",
-    "build": "gatsby build && mv public dist",
+    "build": "gatsby build && mv public dist/public",
     "lint": "markdownlint 'content/docs/**/*.md'",
     "copy:contribs": "cp ../.all-contributorsrc data/contributors.json",
     "prepare": "npm run copy:contribs",
